# pythonlearning

./: adding.py  big_list.py  condition.py  coors.csv  funclib.py  indexgiver.py  lists.py  multiples.py  numarranger.py  numguesser.py  perfectNumAnswer.py  perfectnum copy.py  perfectnum.py  phonebook.py  pyproject.toml  pyramid.py  rock_paper_scissors.py  schcedulemaker.py  schedule.csv  tower.py  willItWork.py
